Arena

adjust salvage event "Ship Roulette" -
    add the option to connect the output of a colony to the station
    always require Metal, ship components and machinery
    Let player choose between runtime of 1 month, 2, 3 or 4 then deliver the output and the station salvage to the colony
    add an intel entry showing the progress

-----------------------o-----------------------
3.2.d
Items
Fixed - Planet "in Range" tooltip no longer incorrectly states 12 LY range restriction for hypertransmitter (it's infinite as intended)

Restoration Docks
Fixed - Broken Tooltips

Requisitions center
Fixed - Broken Tooltips

3.2.c
Privateer Base
Added - Small interaction with Substance.Abuse
Added - Setting to auto-deliver to gathering point (reverting the change below)
Adjusted - Now delivers loot to local storage (use a courier port to transfer it.)

Items
Fixed - Transpoofer no longer causes faction change to get stuck when undocking

Salvage Yards
Fixed - Salvage Yard crash incompatibility with the ICE mod

3.2.b
Variable Assembler
Fixed - AI Core Tooltips

Artillery
Fixed - Crash when Railgun is shooting

3.2.a
General
Adjusted - Complete code restructuring

Techmining
Removed - Techmining progress indicator (Download Better Colonies instead!)
Removed - Vanilla techmining override

Items
Adjusted - Chance for patrols to ignore the Sensor Decoy reduced to 10% (from 30%)
Fixed - Transpoofer no longer causes you to fight your own fleet when engaging a station while it is active

Supercomputer
Fixed - Crash if colony does not have primary entity

World Symbols
Fixed - No longer applies stability bonus to planet when hovering over build menu
Fixed - Stability bonus now properly spreads to other in-faction planets in the system without needing to open them

Detachments
Fixed - Mystery crash https://discord.com/channels/187635036525166592/619635013201428481/1043634065917608088

Minefields
Adjusted - Condition is now visible in planet search

Artillery